# splat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  simple.ply
shader/: gaussian.frag  gaussian.vert  point.frag  point.vert
src/: CMakeLists.txt  analyze_ply.cpp  app.cpp  app.hpp  camera.cpp  camera.hpp  util.cpp  util.hpp
